--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         "autosize": true,
                         //"width": 320,
                         //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
+                        "symbol": "BITTREX:MCOBTC",
                         "interval": "5",
                         "timezone": "Etc/UTC",
                         "theme": "Light",
@@ -67,7 +67,7 @@
                         "autosize": true,
                         //"width": 320,
                         //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
+                        "symbol": "BITTREX:XRPBTC",
                         "interval": "5",
                         "timezone": "Etc/UTC",
                         "theme": "Light",
@@ -97,7 +97,7 @@
                         "autosize": true,
                         //"width": 320,
                         //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
+                        "symbol": "BITTREX:IOPBTC",
                         "interval": "5",
                         "timezone": "Etc/UTC",
                         "theme": "Light",
@@ -127,129 +127,7 @@
                         "autosize": true,
                         //"width": 320,
                         //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
-                        "interval": "5",
-                        "timezone": "Etc/UTC",
-                        "theme": "Light",
-                        "style": "1",
-                        "locale": "en",
-                        "toolbar_bg": "#f1f3f6",
-                        "enable_publishing": false,
-                        "allow_symbol_change": true,
-                        "hide_top_toolbar": true,
-                        "save_image": false,
-                        "hideideas": true,
-                        "studies": [
-                            "BB@tv-basicstudies",
-                            //"MACD@tv-basicstudies",
-                            //"PSAR@tv-basicstudies",
-                            //"StochasticRSI@tv-basicstudies"
-                        ]
-                    });
-                </script>
-                <!-- TradingView Widget END -->
-
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <!-- TradingView Widget BEGIN -->
-                <script type="text/javascript">
-                    new TradingView.widget({
-                        "autosize": true,
-                        //"width": 320,
-                        //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
-                        "interval": "5",
-                        "timezone": "Etc/UTC",
-                        "theme": "Light",
-                        "style": "1",
-                        "locale": "en",
-                        "toolbar_bg": "#f1f3f6",
-                        "enable_publishing": false,
-                        "allow_symbol_change": true,
-                        "hide_top_toolbar": true,
-                        "save_image": false,
-                        "hideideas": true,
-                        "studies": [
-                            "BB@tv-basicstudies",
-                            //"MACD@tv-basicstudies",
-                            //"PSAR@tv-basicstudies",
-                            //"StochasticRSI@tv-basicstudies"
-                        ]
-                    });
-                </script>
-                <!-- TradingView Widget END -->
-
-            </td>
-            <td>
-                <!-- TradingView Widget BEGIN -->
-                <script type="text/javascript">
-                    new TradingView.widget({
-                        "autosize": true,
-                        //"width": 320,
-                        //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
-                        "interval": "5",
-                        "timezone": "Etc/UTC",
-                        "theme": "Light",
-                        "style": "1",
-                        "locale": "en",
-                        "toolbar_bg": "#f1f3f6",
-                        "enable_publishing": false,
-                        "allow_symbol_change": true,
-                        "hide_top_toolbar": true,
-                        "save_image": false,
-                        "hideideas": true,
-                        "studies": [
-                            "BB@tv-basicstudies",
-                            //"MACD@tv-basicstudies",
-                            //"PSAR@tv-basicstudies",
-                            //"StochasticRSI@tv-basicstudies"
-                        ]
-                    });
-                </script>
-                <!-- TradingView Widget END -->
-
-            </td>
-            <td>
-                <!-- TradingView Widget BEGIN -->
-                <script type="text/javascript">
-                    new TradingView.widget({
-                        "autosize": true,
-                        //"width": 320,
-                        //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
-                        "interval": "5",
-                        "timezone": "Etc/UTC",
-                        "theme": "Light",
-                        "style": "1",
-                        "locale": "en",
-                        "toolbar_bg": "#f1f3f6",
-                        "enable_publishing": false,
-                        "allow_symbol_change": true,
-                        "hide_top_toolbar": true,
-                        "save_image": false,
-                        "hideideas": true,
-                        "studies": [
-                            "BB@tv-basicstudies",
-                            //"MACD@tv-basicstudies",
-                            //"PSAR@tv-basicstudies",
-                            //"StochasticRSI@tv-basicstudies"
-                        ]
-                    });
-                </script>
-                <!-- TradingView Widget END -->
-
-            </td>
-            <td>
-                <!-- TradingView Widget BEGIN -->
-                <script type="text/javascript">
-                    new TradingView.widget({
-                        "autosize": true,
-                        //"width": 320,
-                        //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
+                        "symbol": "BITTREX:RISEBTC",
                         "interval": "5",
                         "timezone": "Etc/UTC",
                         "theme": "Light",
@@ -281,7 +159,7 @@
                         "autosize": true,
                         //"width": 320,
                         //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
+                        "symbol": "BITTREX:XVGBTC",
                         "interval": "5",
                         "timezone": "Etc/UTC",
                         "theme": "Light",
@@ -311,7 +189,7 @@
                         "autosize": true,
                         //"width": 320,
                         //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
+                        "symbol": "BITTREX:OKBTC",
                         "interval": "5",
                         "timezone": "Etc/UTC",
                         "theme": "Light",
@@ -341,7 +219,7 @@
                         "autosize": true,
                         //"width": 320,
                         //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
+                        "symbol": "BITTREX:PIVXBTC",
                         "interval": "5",
                         "timezone": "Etc/UTC",
                         "theme": "Light",
@@ -371,7 +249,129 @@
                         "autosize": true,
                         //"width": 320,
                         //"height": 320,
-                        "symbol": "BITTREX:NEOBTC",
+                        "symbol": "BITTREX:VRCBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:ETHBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:PKBBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:OMNIBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:PAYBTC",
                         "interval": "5",
                         "timezone": "Etc/UTC",
                         "theme": "Light",
