--- a/index.html
+++ b/index.html
@@ -395,5 +395,405 @@
 
             </td>
         </tr>
+
+
+
+
+
+
+        <tr>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:BTCUSDT",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:NEOBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:GRSBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:STORJBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+        </tr>
+
+
+        <tr>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:ETHBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:PKBBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:OMNIBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:PAYBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+        </tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <tr>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:VTCBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:OMGBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:STRATBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+            <td>
+                <!-- TradingView Widget BEGIN -->
+                <script type="text/javascript">
+                    new TradingView.widget({
+                        "autosize": true,
+                        //"width": 320,
+                        //"height": 320,
+                        "symbol": "BITTREX:CVCBTC",
+                        "interval": "5",
+                        "timezone": "Etc/UTC",
+                        "theme": "Light",
+                        "style": "1",
+                        "locale": "en",
+                        "toolbar_bg": "#f1f3f6",
+                        "enable_publishing": false,
+                        "allow_symbol_change": true,
+                        "hide_top_toolbar": true,
+                        "save_image": false,
+                        "hideideas": true,
+                        "studies": [
+                            "BB@tv-basicstudies",
+                            //"MACD@tv-basicstudies",
+                            //"PSAR@tv-basicstudies",
+                            //"StochasticRSI@tv-basicstudies"
+                        ]
+                    });
+                </script>
+                <!-- TradingView Widget END -->
+
+            </td>
+        </tr>
     </table>
 </body>
