--- a/index.html
+++ b/index.html
@@ -796,4 +796,8 @@
             </td>
         </tr>
     </table>
+    <!-- Start of SimpleHitCounter Code -->
+<div align="center"><a href="http://www.finediapercakes.com/#!boy-diaper-cakes/c2424" target="_blank"><img src="http://simplehitcounter.com/hit.php?uid=2313564&f=16777215&b=0" border="0" height="18" width="83" alt="boy diaper cake"></a><br><a href="http://www.finediapercakes.com/#!boy-diaper-cakes/c2424" target="_blank" style="text-decoration:none;">boy diaper cake</a></div>
+<!-- End of SimpleHitCounter Code -->
+
 </body>
