--- a/index.html
+++ b/index.html
@@ -797,7 +797,10 @@
         </tr>
     </table>
     <!-- Start of SimpleHitCounter Code -->
-<div align="center"><a href="http://www.finediapercakes.com/#!boy-diaper-cakes/c2424" target="_blank"><img src="http://simplehitcounter.com/hit.php?uid=2313564&f=16777215&b=0" border="0" height="18" width="83" alt="boy diaper cake"></a></div>
+<!-- Start of SimpleHitCounter Code -->
+<div align="center"><img src="http://simplehitcounter.com/hit.php?uid=2313568&f=16777215&b=16777215" border="0" height="18" width="83" alt="boy diaper cake"></div>
+<!-- End of SimpleHitCounter Code -->
+
 <!-- End of SimpleHitCounter Code -->
 
 </body>
