--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
     </table>
     <!-- Start of SimpleHitCounter Code -->
 <!-- Start of SimpleHitCounter Code -->
-<div align="center"><img src="http://simplehitcounter.com/hit.php?uid=2313568&f=16777215&b=16777215" border="0" height="18" width="83" alt="boy diaper cake"></div>
+<div align="center"><img src="http://simplehitcounter.com/hit.php?uid=2313568&f=16777215&b=0" border="0" height="18" width="83" alt="boy diaper cake"></div>
 <!-- End of SimpleHitCounter Code -->
 
 <!-- End of SimpleHitCounter Code -->
